--- a/css/index.css
+++ b/css/index.css
@@ -21,7 +21,7 @@ body {
  
 }
 
-.section-box {
+.practice-section-box {
     width: 80%;
     height:800px;
     margin-left: 10%;
@@ -39,10 +39,11 @@ body {
     width: 80%;
     background-color: #fff;
     box-shadow: 2px 0px 15px rgb(190, 189, 189);
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr 5fr;
     align-items: center;
-    justify-content: space-around;
-    padding: 40px;
+    column-gap: 30px;
+    padding: 30px;
 }
 
 .practice-icon {
@@ -51,14 +52,14 @@ body {
     color: rgba(95, 61, 1, 0.75);
 }
 .left-side {
-    width: 60%;
+
     display: flex;
     flex-direction:column;
     row-gap: 8px;
     color: rgba(5, 5, 5, 0.904);
 }
 .place{
-
+  
 }
 .leader{
 
